# naive-linux-timer-gui

./: .gitignore  BUGS.md  CHANGES.md  CLAUDE.md  LICENSE  README.md  TODO.md  first-pass-shader-defaults  gpu-select.sh  green-nebula-gravity.json  green-nebula.json  launch.sh  new-params.json  parameters.json  pyproject.toml
docs/: HANDOFF.md
src/naive_timer/: __init__.py  __main__.py  app.py  countdown.py  shard.py  sound.py  stopwatch.py  tuning.py
src/naive_timer/shaders/: shard.frag  shard.vert  sky.frag  sky.vert
tests/: test_cli.py  test_countdown.py  test_gui_smoke.py  test_sound.py  test_stopwatch.py
tools/: bench-gpu.sh  bench_sky.py
