[project]
name = "naive-linux-timer-gui"
version = "0.1.0"
description = "A simple stopwatch/timer for Linux with naive 3D/animation features"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["PySide6>=6.5"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
naive-timer = "naive_timer.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
